@@ -3,6 +3,7 @@
 	* Remove locally defined quoteJSvalue and getUpdateJS (these were fixed in TYPO3 4.0).
 	* Use TCA-driven field module_sys_dmail_html in css-styled template.
 	* If usergroup selection is enabled on edit, keep usergroups set by confirmation or acceptation.
+	* Ensure that case shifting operations on markers are performed using C locale.
 
 2006-03-25 Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
 	* Add TS setup property extraLabels. Thanks to Dmitry Dulepov.
